fix: collapsePanel style use common variables

--- a/packages/bui-core/src/CollapsePanel/CollapsePanel.less
+++ b/packages/bui-core/src/CollapsePanel/CollapsePanel.less
@@ -1,5 +1,7 @@
 .bui-collapse-panel {
   width: 100%;
+  background-color: var(--bui-color-bg-view);
+  color: var(--bui-color-fg-default);
 }
 
 .bui-collapse-panel-item-header {
@@ -11,8 +13,8 @@
 }
 
 .bui-collapse-panel-item-header-label {
-  padding: 12px 0;
-  font-size: 18px;
+  padding: var(--bui-spacing-lg) 0;
+  font-size: var(--bui-title-size-2);
 }
 
 .bui-collapse-panel-item-header-icon-arrow {
@@ -25,8 +27,8 @@
 }
 
 .bui-collapse-panel-item-content {
-  padding: 12px 0;
-  font-size: 14px;
+  padding: var(--bui-spacing-lg) 0;
+  font-size: var(--bui-text-size-1);
   transition: height 0.5s ease;
   overflow: hidden;
 }
